force-app/main/default/objects/Budget_Line_Item__c/fields/Cash_Amount_Inc_GST_Currency__c.field-meta.xml
<CustomField>
    <fullName>Cash_Amount_Inc_GST_Currency__c</fullName>
    <label>Total Cost Inc. GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>