force-app/main/default/objects/Budget_Line_Item__c/fields/In_Kind__c.field-meta.xml
<CustomField>
    <fullName>In_Kind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Kind</label>
    <type>Checkbox</type>
</CustomField>