force-app/main/default/objects/Budget_Line_Item__c/fields/IsClone__c.field-meta.xml
<CustomField>
    <fullName>IsClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClone</label>
    <type>Checkbox</type>
</CustomField>