force-app/main/default/objects/Budget_Line_Item__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Line Items (Organisation)</relationshipLabel>
    <relationshipName>Budget_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>