force-app/main/default/objects/Budget_Line_Item__c/fields/SAP_Category__c.field-meta.xml
<CustomField>
    <fullName>SAP_Category__c</fullName>
    <label>SAP Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary Costs</fullName>
            </value>
            <value>
                <fullName>Repairs/Maintenance</fullName>
            </value>
            <value>
                <fullName>Computer equipment</fullName>
            </value>
            <value>
                <fullName>Plants &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Advertising/ Promotional Activities</fullName>
            </value>
            <value>
                <fullName>Professional/Consulting/Contractual Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>