force-app/main/default/objects/Budget_Line_Item__c/fields/Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Shortfall__c</fullName>
    <label>Shortfall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>