force-app/main/default/objects/Budget_Line_Item__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level A 1</fullName>
            </value>
            <value>
                <fullName>Level A 2</fullName>
            </value>
            <value>
                <fullName>Level A 3</fullName>
            </value>
            <value>
                <fullName>Level A 4</fullName>
            </value>
            <value>
                <fullName>Level A 5</fullName>
            </value>
            <value>
                <fullName>Level A 6</fullName>
            </value>
            <value>
                <fullName>Level A 7</fullName>
            </value>
            <value>
                <fullName>Level A 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>