force-app/main/default/objects/Budget_Line_Item__c/fields/Unit_of_Time__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Time__c</fullName>
    <label>Unit of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot enter more than 1 year per Units column</fullName>
            </value>
            <value>
                <fullName>Cannot enter more than 12 months per Units column</fullName>
            </value>
            <value>
                <fullName>Cannot enter more than 1645 hours per Units column</fullName>
            </value>
            <value>
                <fullName>Cannot enter more than 235 days per Units column</fullName>
            </value>
            <value>
                <fullName>Cannot enter more than 47 weeks per Units column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>