force-app/main/default/objects/Budget_Line_Item__c/fields/Year_3_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year_3_Cost__c</fullName>
    <label>Year 3 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>