force-app/main/default/objects/Budget_Line_Item__c/recordTypes/Non_Salary.recordType-meta.xml
<RecordType>
    <fullName>Non_Salary</fullName>
    <active>false</active>
    <label>Non-Salary</label>
</RecordType>