force-app/main/default/objects/Budget_Line_Item__c/recordTypes/Salary.recordType-meta.xml
<RecordType>
    <fullName>Salary</fullName>
    <active>true</active>
    <label>Salary</label>
</RecordType>